<resources>

    <!-- nomi activity - nome intestazione layout -->
    <string name="app_name">Convocazioni</string>
    <string name="label_pagina_menu_principale">Convocazioni - Menu Principale</string>
    <string name="label_pagina_crea_squadra">Convocazioni - Crea Squadra</string>
    <string name="label_pagina_modifica_squadra">Convocazioni - Modifica Squadra</string>
    <string name="label_pagina_elimina_squadra">Convocazioni - Elimina Squadra</string>
    <string name="label_pagina_crea_convocazione">Convocazioni - Crea Convocazione</string>
    <string name="label_pagina_smimstatore_multisquadra">Convocazioni - Seleziona Squadra</string>
    <string name="label_pagina_visualizza_convocazione">Convocazioni - Visualizza Convocazione</string> 

    <!-- menu da tasto -->
    <string name="versione_app">Versione App</string>
    <string name="action_share">Condividi con</string>    
    
    <!-- menu principale -->
    <string name="bottone_crea_squadra">Crea Squadra</string>
    <string name="bottone_modifica_squadra">Modifica Squadra</string>
    <string name="bottone_elimina_squadra">Elimina Squadra</string>
    <string name="bottone_crea_convocazione">Crea Convocazione</string>
    <string name="bottone_visualizza_convocazioni">Visualizza Convocazioni</string>
    
    
    <!-- crea utenza -->
    <string name="hint_text_username_admin">Username Admin</string>
	<string name="hint_text_password_admin">Password Admin</string>
	<string name="hint_text_conferma_password_admin">Conferma Password Admin</string>	
	<string name="hint_text_username_user">Username Genitore </string>
	<string name="hint_text_password_user">Password Genitore</string>
	<string name="hint_text_conferma_password_user">Conferma Password Genitore</string>	
	<string name="text_spiegazione_creazione_squadra">
	Creare due tipo di utenze: ADMIN per modificare la convocazioni, GENITORE per la sola lettura
	</string>	
	<string name="conferma_crea_utenza">Conferma</string>
	
	
	<!-- crea squadra -->
    <string name="text_crea_rosa">Crea la tua rosa</string>
    <string name="bottone_aggiungi_giocatore">Aggiungi</string>
	<string name="hint_text_inserisci_giocatore">Inserisci un giocatore</string>
	<string name="bottone_salva">Salva</string>
 	<string name="bottone_visualizza">Visualizza</string>
 	<string name="bottone_elimina_giocatore">Elimina</string>
 	<string name="text_indicazione_nome_squadra">
 	Dare un nome identificativo alla squadra.
 	</string>
 	<string name="hint_text_nome_squadra">Inserisci il nome della squadra</string>
 	<string name="text_indicazione_nome_giocatore">
 	Inserire un giocatore e premere sul pulsante Aggiungi.    
 	</string>
 	
 	<!-- visualizza squadra -->
 	<string name="testo_checkbox_Giocatore_visualizzato">Convocato</string>
 	
 	
 	<!-- crea convocazione -->
 	<string name="bottone_salva_convocazione">Salva</string>
	<string name="bottone_elenco_convocati">Elenco Convocati</string>
	<string name="bottone_informazioni_partita">Informazioni</string>
	<string name="text_partita">Partita</string>
 	<string name="hint_text_partita">Inserire la partita</string>
	<string name="text_valevole_per">Valevole per</string>
 	<string name="hint_text_valevole_per">Inserire competizione</string>
	<string name="text_data_partita">Data della partita</string>
 	<string name="hint_text_data_partita">Inserire la data</string>
	<string name="text_orario_partita">Orario della partita</string>
 	<string name="hint_text_orario_partita">Ore:</string>
	<string name="text_luogo_partita">Luogo della partita</string>
 	<string name="hint_text_luogo_partita">Inserire il campo</string>
	<string name="text_orario_convocazione">Orario della convocazione</string>
 	<string name="hint_text_orario_convocazione">Ore:</string>		
	<string name="text_luogo_convocazione">Ritrovo</string>
 	<string name="hint_text_luogo_convocazione">Inserire il luogo di ritrovo</string>
 	<string name="text_note">Note</string>
 	<string name="hint_text_note">Inserire eventuali note</string>

 	<!-- stringhe usate lato java -->
 	<string name="squadra_creata_con_successo">Squadra salvata con successo</string>
 	<string name="inserisci_almeno_un_giocatore">Inserisci almeno un giocatore</string>
 	<string name="scegli_orario_convocazione">Scegli l\'orario della convocazione</string>
 	<string name="scegli_orario_partita">Scegli l\'orario della partita</string>	
 	<string name="convocazione_creata_con_successo">Convocazione creata con successo</string>
 	<string name="conferma_eliminazione_squadra">Conferma eliminazione squadra</string>
 	<string name="elimina">Elimina</string>
 	<string name="squadra_eliminata_con_successo">Squadra </string>
	<string name="annulla">Annulla</string>
	<string name="giocatoriInRosa">Giocatori in rosa: </string>
 	<string name="squadre">Squadre</string>	
</resources>
